the_project/k8s/pingpong-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-postgres
  namespace: exercises
  labels:
    app: pingpong-postgres
spec:
  clusterIP: None
  selector:
    app: pingpong-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingpong-postgres
  namespace: exercises
  labels:
    app: pingpong-postgres
spec:
  serviceName: pingpong-postgres
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-postgres
  template:
    metadata:
      labels:
        app: pingpong-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 1m
              memory: 32Mi
            limits:
              cpu: 2m
              memory: 64Mi
          volumeMounts:
            - name: postgres-data
              mountPath: /postgres-data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard-rwo
        resources:
          requests:
            storage: 1Gi
