the_project/k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-postgres
  labels:
    app: todo-postgres
spec:
  clusterIP: None
  selector:
    app: todo-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-postgres
  labels:
    app: todo-postgres
spec:
  serviceName: todo-postgres
  replicas: 1
  selector:
    matchLabels:
      app: todo-postgres
  template:
    metadata:
      labels:
        app: todo-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /postgres-data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard-rwo
        resources:
          requests:
            storage: 1Gi
